[workspace]
resolver = "2"
members = [
	# bin
	"bin/void_caster",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]

# consensus
tendermint-proto = "0.40.0"

# tendermint
libp2p = { version = "0.56.0", default-features = false }

# runtime (async)
tokio = { version = "1.45.0", default-features = false }
futures = "0.3.3"

# tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.19"

# serde
serde = "1.0.2"
serde_json = "1.0.14"
serde_yaml = "0.9.3"

# crypto
ed25519-dalek = "2.1.0"

# misc
prost = "0.13.3"
clap = "4.5.4"
bytes = "1.1"
rand = "0.9.0"
base64 = "0.22.0"
thiserror = "2.0.10"
eyre = "0.6.12"
