[workspace]
resolver = "2"
members = [
	# bin
	"bin/void_caster",

	# core
	"crates/types",
	"crates/core",

	# network
	"crates/network/p2p",

	# tests
	"crates/test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]

# void caster
vc-types = { path = "crates/types" }
vc-core = { path = "crates/core" }
vc-p2p = { path = "crates/network/p2p" }

# tests related
vc-test-utils = { path = "crates/test-utils" }

# consensus
void-proto = { git = "https://github.com/sajeevanjspy/void-proto.git" }

# tendermint
# network
libp2p = { version = "0.56.0", default-features = false }

# runtime (async)
tokio = { version = "1.45.0", default-features = false }
futures = "0.3.3"

# tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.19"

# serde
serde = { version = "1.0.2", features = ["derive"] }
serde_json = "1.0.14"
serde_yaml = "0.9.3"

# crypto
ed25519-dalek = "2.1.0"

# misc
prost = "0.14"
clap = "4.5.4"
bytes = "1.1"
rand = "0.9.0"
base64 = "0.22.0"
thiserror = "2.0.10"
eyre = "0.6.12"
sha2 = "0.10.9"
sha3 = "0.10.8"
