[package]
name = "vc-p2p"
version.workspace = true
edition.workspace = true

[dependencies]

vc-types.workspace = true
vc-core.workspace = true

libp2p = { workspace = true, features = ["kad", "gossipsub", "request-response", "quic", "tcp", "tokio", "noise", "yamux", "cbor", "ping"] }
tokio = { workspace = true, features = ["full"] }
futures.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror.workspace = true
eyre.workspace = true
serde = { workspace = true, features = ["derive"] }

